优化验收测试脚本以增强文件加载的重试机制，改进数据列表生成逻辑以支持更灵活的路径配置，调整配置文件中的默认训练参数，新增数据增强配置以提升模型训练效果。

--- a/configs/48_config.yaml
+++ b/configs/48_config.yaml
@@ -33,7 +33,7 @@ global_settings:
   class_name: face                  # 数据集类别目录名称 (例如 'face'), 数据列表在此目录下
   image_size: 112                   # 默认输入模型图像尺寸 (推荐使用112x112或更高)
   num_classes: 6                    # 数据集类别数量 (输出层维度，以及用于 ArcFace/CrossEntropy 构建头部)。请根据您的数据集实际类别数量修改!!!
-  epochs: 100                       # 默认训练总轮数 (对于 AdamW + CosineAnnealing 这种组合，100-200 epochs 是常见范围)
+  epochs: 10                       # 默认训练总轮数 (对于 AdamW + CosineAnnealing 这种组合，100-200 epochs 是常见范围)
   batch_size: 64                    # 默认批大小 (根据您的GPU显存调整，越大越好，但注意显存限制)
   learning_rate: 0.001              # 默认初始学习率 (AdamW 常用的初始学习率)
   optimizer_type: AdamW             # 默认优化器类型 (AdamW 通常收敛更快)
@@ -102,6 +102,27 @@ global_settings:
     num_workers: 8                  # 数据加载器 worker 数量 (根据CPU核心数和数据集读取速度调整，Windows下建议设为0)
     mean: [0.5, 0.5, 0.5]           # 图像标准化均值 (RGB)
     std: [0.5, 0.5, 0.5]            # 图像标准化标准差 (RGB)
+
+        # 新增数据增强配置
+    data_augmentation:
+      # 是否启用训练时的增强
+      use_train_augmentation: true
+      # 增强 transforms 列表及其参数
+      transforms:
+        # 随机水平翻转
+        RandomFlip: {prob: 0.5}
+        # 随机旋转 (示例: -10到10度之间)
+        RandomRotation: {degrees: 10}
+        # 随机裁剪 (示例: 裁剪后尺寸为原图的0.8到1.0倍)
+        RandomResizedCrop: {scale: [0.8, 1.0], ratio: [0.75, 1.333]}
+        # 颜色抖动 (示例: 调整亮度、对比度、饱和度)
+        ColorJitter: {brightness: 0.2, contrast: 0.2, saturation: 0.2}
+        # 随机擦除 (示例: 概率0.3，擦除区域占原图比例0.02-0.33)
+        RandomErasing: {prob: 0.3, scale: [0.02, 0.33], ratio: [0.3, 3.3]}
+      # 评估和验收时不进行复杂增强，只进行必要的resize和标准化
+      use_eval_augmentation: false # 评估时不使用上述transforms
+      use_acceptance_augmentation: false # 验收时不使用上述transforms
+
 
   # 日志和检查点参数 (train.py 期望从 config.log_interval, config.model_save_dir, etc. 读取)
   # 这些参数在当前脚本中是顶层参数，保持结构以兼容
